Updated Controller with DB

--- a/src/main/resources/templates/products/index.html
+++ b/src/main/resources/templates/products/index.html
@@ -8,7 +8,7 @@
 >
   <title>All Products</title>
   <th:block th:fragment="content">
-    <table>
+    <table class="table">
       <thead>
         <tr>
           <th>Name</th>
